crates/rivora-memory/tests/snapshots/golden_tests__golden_deployment_learning_memory_json.snap
---
source: crates/rivora-memory/tests/golden_tests.rs
assertion_line: 41
expression: output
---
{
  "id": "mem-fixture-deployment-learning",
  "kind": "deployment_learning",
  "scope": "deployment",
  "status": "active",
  "title": "Deployment v2.1.0 reduced latency",
  "body": "Deployment v2.1.0 of the payments service reduced p99 latency by 30 percent.",
  "subject_refs": [
    "dep-v2.1.0",
    "svc-payment"
  ],
  "graph_node_ids": [
    "dep-v2.1.0"
  ],
  "graph_edge_ids": [],
  "receipt_ids": [],
  "source": "receipt",
  "provenance": {
    "source": "fixture-source",
    "source_version": "0.1.0",
    "observed_at": "2026-06-25T12:00:00Z",
    "learned_at": "2026-06-25T12:00:00Z",
    "graph_id": null,
    "graph_node_ids": [],
    "graph_edge_ids": [],
    "receipt_id": null,
    "connector_ref": null,
    "inference_ref": null,
    "ability_ref": null,
    "human_ref": null,
    "raw_ref": null
  },
  "confidence": {
    "score": 0.8,
    "level": "high",
    "explanation": "Fixture confidence",
    "contributing_factors": [],
    "limiting_factors": [],
    "last_evaluated_at": "2026-06-25T12:00:00Z"
  },
  "retention": {
    "policy": "permanent",
    "expires_at": null,
    "review_after": null,
    "max_age_days": null,
    "decay": "none",
    "reason": "fixture retention"
  },
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "memory": 1
  },
  "labels": {},
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "feedback_ids": []
}
