crates/rivora-memory/tests/snapshots/golden_tests__golden_incident_learning_memory_json.snap
---
source: crates/rivora-memory/tests/golden_tests.rs
assertion_line: 31
expression: output
---
{
  "id": "mem-fixture-incident-learning",
  "kind": "incident_learning",
  "scope": "incident",
  "status": "active",
  "title": "Latency incident root cause",
  "body": "The latency incident was caused by a connection pool exhaustion in the payments service.",
  "subject_refs": [
    "inc-latency-001",
    "svc-payment"
  ],
  "graph_node_ids": [
    "inc-latency-001"
  ],
  "graph_edge_ids": [],
  "receipt_ids": [],
  "source": "receipt",
  "provenance": {
    "source": "fixture-source",
    "source_version": "0.1.0",
    "observed_at": "2026-06-25T12:00:00Z",
    "learned_at": "2026-06-25T12:00:00Z",
    "graph_id": null,
    "graph_node_ids": [],
    "graph_edge_ids": [],
    "receipt_id": null,
    "connector_ref": null,
    "inference_ref": null,
    "ability_ref": null,
    "human_ref": null,
    "raw_ref": null
  },
  "confidence": {
    "score": 0.8,
    "level": "high",
    "explanation": "Fixture confidence",
    "contributing_factors": [],
    "limiting_factors": [],
    "last_evaluated_at": "2026-06-25T12:00:00Z"
  },
  "retention": {
    "policy": "permanent",
    "expires_at": null,
    "review_after": null,
    "max_age_days": null,
    "decay": "none",
    "reason": "fixture retention"
  },
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "memory": 1
  },
  "labels": {},
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "feedback_ids": []
}
