crates/rivora-memory/tests/snapshots/golden_tests__golden_invalid_memory_validation_error.snap
---
source: crates/rivora-memory/tests/golden_tests.rs
expression: output
---
invalid value for record_receipt_ids: receipt_ids must not contain empty strings
