crates/rivora-memory/tests/snapshots/golden_tests__golden_sample_index_json.snap
---
source: crates/rivora-memory/tests/golden_tests.rs
assertion_line: 91
expression: output
---
{
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": "org-1"
  },
  "records": {
    "mem-fixture-ability-learning": {
      "id": "mem-fixture-ability-learning",
      "kind": "ability_learning",
      "scope": "ability",
      "status": "active",
      "title": "Deployment validator ability is reliable",
      "body": "The deployment-validator ability has a 95 percent success rate across observed runs.",
      "subject_refs": [
        "ability-deploy-validator"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [
        "receipt-fixture-002"
      ],
      "source": "ability",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-candidate": {
      "id": "mem-fixture-candidate",
      "kind": "fact",
      "scope": "organization",
      "status": "candidate",
      "title": "Candidate organization fact",
      "body": "This organization fact is proposed and awaiting human review.",
      "subject_refs": [
        "org-1"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "human",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-corrected": {
      "id": "mem-fixture-corrected",
      "kind": "fact",
      "scope": "organization",
      "status": "corrected",
      "title": "Corrected organization fact",
      "body": "This organization fact was corrected by an engineer after review.",
      "subject_refs": [
        "org-1"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "human",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {
        "correction_text": "corrected body content"
      },
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-expired": {
      "id": "mem-fixture-expired",
      "kind": "operational_note",
      "scope": "service",
      "status": "expired",
      "title": "Expired operational note",
      "body": "This operational note about a temporary override has expired.",
      "subject_refs": [
        "svc-payment"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "system",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "time_bound",
        "expires_at": "2026-06-20T12:00:00Z",
        "review_after": null,
        "max_age_days": null,
        "decay": "linear",
        "reason": "time-bound retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-incident-learning": {
      "id": "mem-fixture-incident-learning",
      "kind": "incident_learning",
      "scope": "incident",
      "status": "active",
      "title": "Latency incident root cause",
      "body": "The latency incident was caused by a connection pool exhaustion in the payments service.",
      "subject_refs": [
        "inc-latency-001",
        "svc-payment"
      ],
      "graph_node_ids": [
        "inc-latency-001"
      ],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "receipt",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-org-fact": {
      "id": "mem-fixture-org-fact",
      "kind": "fact",
      "scope": "organization",
      "status": "active",
      "title": "Organization uses AWS",
      "body": "The organization uses AWS as its primary cloud provider.",
      "subject_refs": [
        "org-1"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "human",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-receipt-learning": {
      "id": "mem-fixture-receipt-learning",
      "kind": "receipt_learning",
      "scope": "service",
      "status": "active",
      "title": "Receipt explains connection pool behavior",
      "body": "The reliability receipt confirmed that the payments service connection pool stabilizes after warm-up.",
      "subject_refs": [
        "svc-payment"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [
        "receipt-fixture-001"
      ],
      "source": "receipt",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-rejected": {
      "id": "mem-fixture-rejected",
      "kind": "fact",
      "scope": "organization",
      "status": "rejected",
      "title": "Rejected organization fact",
      "body": "This organization fact was reviewed and rejected by an engineer.",
      "subject_refs": [
        "org-1"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "human",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {
        "rejection_reason": "insufficient evidence"
      },
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-service-relationship": {
      "id": "mem-fixture-service-relationship",
      "kind": "service_relationship",
      "scope": "service",
      "status": "active",
      "title": "API gateway depends on payments",
      "body": "The api-gateway service depends on the payments service for checkout.",
      "subject_refs": [
        "svc-api-gateway",
        "svc-payment"
      ],
      "graph_node_ids": [
        "svc-api-gateway",
        "svc-payment"
      ],
      "graph_edge_ids": [
        "edge-depends-on"
      ],
      "receipt_ids": [],
      "source": "graph",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {},
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    },
    "mem-fixture-superseded": {
      "id": "mem-fixture-superseded",
      "kind": "fact",
      "scope": "organization",
      "status": "superseded",
      "title": "Superseded organization fact",
      "body": "This organization fact has been superseded by a newer observation.",
      "subject_refs": [
        "org-1"
      ],
      "graph_node_ids": [],
      "graph_edge_ids": [],
      "receipt_ids": [],
      "source": "human",
      "provenance": {
        "source": "fixture-source",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "learned_at": "2026-06-25T12:00:00Z",
        "graph_id": null,
        "graph_node_ids": [],
        "graph_edge_ids": [],
        "receipt_id": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null,
        "human_ref": null,
        "raw_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": [],
        "last_evaluated_at": "2026-06-25T12:00:00Z"
      },
      "retention": {
        "policy": "permanent",
        "expires_at": null,
        "review_after": null,
        "max_age_days": null,
        "decay": "none",
        "reason": "fixture retention"
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "memory": 1
      },
      "labels": {
        "superseded_by": "mem-fixture-org-fact"
      },
      "metadata": {
        "tags": [],
        "labels": {},
        "organization_id": null
      },
      "feedback_ids": []
    }
  }
}
