crates/rivora-memory/tests/snapshots/golden_tests__golden_superseded_memory_json.snap
---
source: crates/rivora-memory/tests/golden_tests.rs
assertion_line: 81
expression: output
---
{
  "id": "mem-fixture-superseded",
  "kind": "fact",
  "scope": "organization",
  "status": "superseded",
  "title": "Superseded organization fact",
  "body": "This organization fact has been superseded by a newer observation.",
  "subject_refs": [
    "org-1"
  ],
  "graph_node_ids": [],
  "graph_edge_ids": [],
  "receipt_ids": [],
  "source": "human",
  "provenance": {
    "source": "fixture-source",
    "source_version": "0.1.0",
    "observed_at": "2026-06-25T12:00:00Z",
    "learned_at": "2026-06-25T12:00:00Z",
    "graph_id": null,
    "graph_node_ids": [],
    "graph_edge_ids": [],
    "receipt_id": null,
    "connector_ref": null,
    "inference_ref": null,
    "ability_ref": null,
    "human_ref": null,
    "raw_ref": null
  },
  "confidence": {
    "score": 0.8,
    "level": "high",
    "explanation": "Fixture confidence",
    "contributing_factors": [],
    "limiting_factors": [],
    "last_evaluated_at": "2026-06-25T12:00:00Z"
  },
  "retention": {
    "policy": "permanent",
    "expires_at": null,
    "review_after": null,
    "max_age_days": null,
    "decay": "none",
    "reason": "fixture retention"
  },
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "memory": 1
  },
  "labels": {
    "superseded_by": "mem-fixture-org-fact"
  },
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "feedback_ids": []
}
